--- a/t.ipynb
+++ b/t.ipynb
@@ -2,59 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[OPEN LOG]: 17 frame [00:00, 310.06 frame/s]\n",
+      "[OPEN TRJ]: 14 frame [00:00, 3685.22 frame/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cp2kbrew as cb\n",
+    "\n",
+    "path = \"./src/files/cp2k/2022.2/errors/log_less_error\"\n",
+    "path = \"./src/files/cp2k/2022.2/errors/noisy_restart\"\n",
+    "# path = \"./src/files/cp2k/2022.2/errors/restart_first_frame_error\"\n",
+    "trjfile = path + \"/out-pos-1.xyz\"\n",
+    "logfile = path + \"/out.log\"\n",
+    "brewer = cb.Brewer(logfile, trjfile).gather()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[STEP 01] -> gather\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[OPEN LOG]: 17it [00:00, 210.07it/s]\n",
-      "[OPEN TRJ]: 18it [00:00, 2912.04it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[STEP 02] -> check\n",
-      "[STEP 03] -> fix\n",
-      "\tFinal frame data is empty in LOG file.\n",
-      "[RESULT]: SUCCESS\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "None\n",
+      "Input error is None\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(17, 3, 3)"
+       "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import cp2kbrew as cb\n",
-    "\n",
-    "path = \"/nas_2/minu928/2_AqueousEletrolytes/cp2kbrew/src/files/cp2k/2022.2/errors/log_less_error\"\n",
-    "a = cb.Alchemist(logfile=path + \"/out.log\", trjfile=path + \"/out-pos-1.xyz\")\n",
-    "a.cell.shape"
+    "error = brewer.check()\n",
+    "print(error)\n",
+    "brewer.fix(error, verbose=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -73,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
