--- a/t.ipynb
+++ b/t.ipynb
@@ -2,49 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[OPEN LOG]: 17 frame [00:00, 202.54 frame/s]\n",
-      "[OPEN TRJ]: 14 frame [00:00, 2589.99 frame/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input error is NoisyRestartError\n",
-      " -> Try Fix...\n",
-      "\tTRJ(0) -> LOG(1)\n",
-      "\tTRJ(1) -> LOG(2)\n",
-      "\tTRJ(2) -> LOG(3)\n",
-      "\tTRJ(3) -> LOG(4)\n",
-      "\tTRJ(4) -> LOG(6)\n",
-      "\tTRJ(5) -> LOG(7)\n",
-      "\tTRJ(6) -> LOG(8)\n",
-      "\tTRJ(7) -> LOG(9)\n",
-      "\tTRJ(8) -> LOG(10)\n",
-      "\tTRJ(9) -> LOG(11)\n",
-      "\tTRJ(10) -> LOG(12)\n",
-      "\tTRJ(11) -> LOG(14)\n",
-      "\tTRJ(12) -> LOG(15)\n",
-      "\tTRJ(13) -> LOG(16)\n",
-      " -> Check Energy Tolerance\n",
-      " -> Success\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cp2kbrew as cb\n",
     "\n",
@@ -53,45 +13,28 @@
     "# path = \"./src/files/cp2k/2022.2/errors/restart_first_frame_error\"\n",
     "trjfile = path + \"/out-pos-1.xyz\"\n",
     "logfile = path + \"/out.log\"\n",
-    "brewer = cb.Brewer(logfile, trjfile)"
+    "brewer = cb.Brewer(logfile, mode=\"manual\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "Input error is None\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "True"
+       "(1, 192, 1)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "error = brewer.check()\n",
-    "print(error)\n",
-    "brewer.fix(error, verbose=True)"
+    "brewer.atom.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -110,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
